Fixed category name alignment.

--- a/css/style.css
+++ b/css/style.css
@@ -55,7 +55,7 @@ body {
   font-size: 24px;
   font-weight: normal;
   color: #a2a2ac;
-  margin: 0 0 0 100px;
+  margin: 0 0 15px 100px;
 }
 
 #content h1 a {
